# simple-legal-doc

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  example.json
auditor/: Dockerfile  README.md  requirements.txt
auditor/app/: config.py  main.py
auditor/app/checks/artifact/: container_archival.py  content_extraction.py  cryptographic_binding.py  document_text_extraction.py  semantic_extraction.py
auditor/app/coordinator/: artifact_integrity_audit.py  coordinator.py  ldvp_pipeline.py  seal_trust_verification.py
auditor/app/events/: __init__.py  emitter.py  memory_emitter.py  models.py
auditor/app/passes/ldvp/: p1_context_mapping.py  p3_clarity_accessibility.py  p6_completeness.py  p8_delivery_readiness.py
auditor/app/protocols/ldvp/: adapters.py  assembler.py  protocol.py
auditor/app/protocols/ldvp/passes/: base.py  p1_context_mapping.py  p2_ux_usability.py  p3_clarity_accessibility.py  p4_structural_integrity.py  p5_accuracy.py  p6_completeness.py  p7_risk_compliance.py  p8_delivery_readiness.py
auditor/app/protocols/ldvp/prompts/: base_system_rules.txt  p1_context.txt  p2_context.txt  p3_context.txt  p4_context.txt  p5_context.txt  p6_context.txt  p7_context.txt  p8_context.txt
auditor/app/protocols/ldvp/schemas/: p1_output.py  p2_output.py  p3_output.py  p4_output.py  p5_output.py  p6_output.py  p7_output.py  p8_output.py
auditor/app/protocols/ldvp_sandbox/: assembler.py  protocol.py
auditor/app/schemas/: artifact_integrity.py  findings.py  shared.py  verification_report.py
auditor/app/semantic_audit/: __init__.py  context.py  finding_adapter.py  llm_executor.py  operative_chunk.py  pass_base.py  pipeline.py  prompt_fragment.py  result.py  section_chunker.py  semantic_chunker.py  text_slicer.py
auditor/app/utils/: hashing.py  text.py
auditor/tests/: test_container_archival_checks.py  test_coordinator_aia_gating.py  test_coordinator_stv_integration.py  test_cryptographic_binding_checks.py  test_happy_path_semantic_document.py  test_ldvp_gating.py
auditor/tests/findings/: test_adapter_contracts.py  test_finding_metadata_extensions.py  test_stable_finding_id_contract.py  test_stable_finding_ids.py
auditor/tests/fixtures/: pdf_factory.py
auditor/tests/semantic_audit/: helpers.py  mock_llm_executor.py  test_ldvp_cached_token_metrics.py  test_ldvp_p1_pipeline.py  test_ldvp_p1_schema_violation.py  test_ldvp_prompt_hash_events.py  test_ldvp_prompt_prefix_invariance.py  test_ldvp_stop_short_circuit.py  test_ldvp_telemetry_events.py  test_managed_identity_executor.py  test_operative_chunk_invariant.py  test_p6_skips_non_operative_chunks.py  test_semantic_chunking_invariance.py
backend/: Dockerfile  README.md  dev-generate-cert.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: generate.py  templates.py
backend/app/registry/: __init__.py  registry.py
backend/app/schemas/: compliance_test.py  decision.py
backend/app/services/: latex.py  pades.py  pdf_postprocess.py  signing.py
backend/app/templates/compliance_test/: main.tex.jinja  preamble.tex.jinja
backend/app/templates/decision/: layout.tex.jinja  main.tex.jinja  preamble.tex.jinja
backend/app/templates/decision/components/: field_grid.tex  financial_table.tex.jinja  meta_attachments.tex  status_pill.tex
backend/app/utils/: hashing.py
connector/: README.md  config.py  mcp_server.py  payments.py  requirements.txt
connector/setup/: setup_mcp_connector.bat  setup_mcp_connector.sh  validate_backend.sh
connector/utils/: pii_monitor.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  theme.js
proxy/: tinyproxy.conf
signer/: AzureTrustedSigner.cs  Dockerfile  PadesLtSigner.cs  Program.cs  README.md  SealEngine.csproj  SignEndpoint.cs  pyproject.toml  technical-specification.md
signer/app/: main.py
signer/app/api/: routes.py
signer/app/core/: config.py
signer/app/services/: azure_api.py  external_signer.py
