[project]
name = "simple-legal-doc-backend"
version = "0.1.0"
requires-python = ">=3.11"
# dependencies removed to avoid duplication with requirements.txt

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ==============================================================================
# LINTER & FORMATTER (Ruff)
# ==============================================================================
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PL"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ==============================================================================
# TYPE CHECKING (Mypy)
# ==============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ==============================================================================
# TESTING (Pytest)
# ==============================================================================
[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]